# Libro

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md
book_app_api/: main.py  pyproject.toml  readMe.md  requirements.txt
book_app_api/app/: main.py
book_app_api/app/api/: auth_controller.py  conversion.py  health_check.py  summaries.py
book_app_api/app/core/: azure_config.py  database.py  database_config.py  gcs_config.py  security.py
book_app_api/app/dto/: book_dto.py  interaction_dto.py  progress_dto.py  user_dto.py
book_app_api/app/entities/: __init__.py  annotation.py  book.py  chapter.py  interaction.py  progress.py  provider.py  user.py
book_app_api/app/mappers/: book_mapper.py  interaction_mapper.py  progress_mapper.py  user_mapper.py
book_app_api/app/repositories/: book_repository.py  interaction_repository.py  progress_repository.py  user_repository.py
book_app_api/app/services/: book_service.py  gcs_sync.py  interaction_service.py  progress_service.py  user_service.py
book_app_api/app/utils/: epub_storage_utils.py  epub_utils.py  jwt_utils.py
book_app_api/migrations/: env.py
book_app_api/migrations/versions/: 23b3edfc3afd_added_string_references.py  2d30800e72c7_added_lazy_loading.py  34e0a4e228af_added_user_id_in_books_for_user_added_.py  3b7697b20833_changed_relationship_again.py  3c9d90f5ec1a_changed_collumns_for_progress_table_.py  41044cb61e0a_changed_collumns.py  4cee933d618d_added_tables.py  52aa8c0440ac_fixed_imports_to_avoid_circular_.py  64e57a59f508_init.py  82d026d81977_changed_collumns_again.py  b24dd80c9f1a_init.py  (+7 more)
(+121 files in other folders)
